--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@mui/material": "^5.11.10",
     "@mui/styled-engine-sc": "^5.11.9",
     "@reduxjs/toolkit": "^1.9.1",
+    "emoji-picker-react": "^4.4.7",
     "firebase": "^9.15.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-audio-voice-recorder": "^1.0.4",
     "react-cropper": "^2.1.8",
     "react-dom": "^18.2.0",
     "react-html5-camera-photo": "^1.5.11",
